--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
                     </div>
                     <img src="/img/icons/language-switcher.svg" alt="switch" class="translate__ico">
                     <div class="header__top-icons">
-                        <img src="/img/icons/facebook.svg" alt="facebook" class="facebook__ico">
-                        <img src="/img/icons/instagram.svg" alt="instagram" class="instagram__ico">
-                        <img src="/img/icons/email.svg" alt="email" class="email__ico">
+                        <img src="/img/icons/facebook.svg" alt="facebook" class="link__item facebook__ico">
+                        <img src="/img/icons/instagram.svg" alt="instagram" class="link__item instagram__ico">
+                        <img src="/img/icons/email.svg" alt="email" class="link__item email__ico">
                     </div>
                 </div>
             </div>
