--- a/footer.html
+++ b/footer.html
@@ -38,6 +38,8 @@
 
 
    <footer>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+      <script src="/js/script.js"></script>
       <div class="container">
          <div class="footer">
           <div class="left-part">
@@ -58,12 +60,12 @@
               <a href="tel:+33493768754">+33493768754</a>
            </div>
            <div class="e-mail">
-              <img src="./img/icons/e-mail.svg" alt="mail">
+              <img src="./img/icons/email.svg" alt="mail">
               <a href="marks@marks.fr">marks@marks.fr</a>
            </div>
            <div class="social-links">
-              <a href="#" class="instagram"><img src="./img/icons/instagram.svg" alt="instagram"></a>
-              <a href="#" class="facebook"><img src="./img/icons/facebook.svg" alt="facebook"></a>
+              <a href="#" class="instagram"><img src="./img/icons/blackinstagram.svg" alt="instagram"></a>
+              <a href="#" class="facebook"><img src="./img/icons/blackfacebook.svg" alt="facebook"></a>
               <a href="#" class="mail"><img src="./img/icons/black-e-mail.svg" alt="mail"></a>
            </div>
          </div>
@@ -161,4 +163,3 @@
    </footer>
 </body>
 </html>
-Макс красава
