--- a/homepage.html
+++ b/homepage.html
@@ -12,7 +12,7 @@
 <body>
 
 
-   <header class="header ">
+   <header class="header">
 
       <div class="pre-header">
          <div class="container">
@@ -106,50 +106,244 @@
       <h3 class="title">Neighborhoods And Properties</h3>
       <h4 class="subtitle">The famous French Riviera, which lies between the Alps.</h4>
       <div class="gallery">
-         <div><img src="" alt=""><a href="#">saint-jean-cap-ferrat</a></div>
-         <div><img src="" alt=""><a href="#">beaulieu-sur-mer</a></div>
-         <div><img src="" alt=""><a href="#">Villefranche-sur-Mer</a></div>
+         <div class="rayon1"><a href="#">saint-jean-cap-ferrat</a></div>
+         <div class="rayon2"><a href="#">beaulieu-sur-mer</a></div>
+         <div class="rayon3"><a href="#">Villefranche-sur-Mer</a></div>
       </div>
-      <button class="read-more"></button>
-   </div>
+      </div>
+      <div class="contbutton">
+      <button class="read-more">Read more</button>
+      </div>
+   
    </div>
    
-   <div class="thimk-sell">
+   <div class="think-sell">
       <div class="container">
          <img src="img/bigsmoke.svg" alt="M">
          <h2 class="title">Thinking of selling</h2>
+         <div class="button">
          <button class="getin">Get in touch</button>
+         </div>
       </div>
    </div>
 
    <div class="container">
-   <div class="sevices">
+   <div class="services">
       <div class="left">
       <h3 class="title">Services</h3>
       <p class="about">Marks Real Estate has since the foundation in 2002 offered services and to represent both buyers, sellers, renters and
       letters on the French Riviera. We proud ourselves with a broad expertise in aiding our clients from the thinking phase
       to actual implementation of their projects and dreams.</p>
-      <button class="read-more">Read more</button>
+      <div class="button">
+      <a href="#"><button class="read-more">Read more</button></a>
+      </div>
       </div>
       <div class="right">
-         <div class="punkt">Sellers</div>
-         <div class="punkt">Sellers</div>
-         <div class="punkt">Sellers</div>
+         <a href="#"><div class="punkt">Sellers</div></a>
+         <a href="#"><div class="punkt">Renters</div></a> 
+         <a href="#"><div class="punkt">Buyers</div></a>
       </div>
       
    </div>
-   </div>
+  
    <div class="featured-properties">
-      <h3 class="title">Featured Properties</h3>
+      <h3 class="subtitle">Featured Properties</h3>
+      <div class="gray-square"></div>
+      <div class="homepageslider">
+         <div class="product">
+            <img src="./img/dom.jpg" alt="product">
+            <div class="type">
+               For rent
+            </div>
+            <h3 class="title">Art Deco 5-bedroom villa with full floor r...</h3>
+            <h3 class="rayon">SAINT-JEAN-CAP-FERRAT</h3>
+            <div class="rooms">
+               <div class="beds">
+                  <img src="./img/icons/bed.svg" alt="bed">
+                  <h4><span>Beds:</span> 5</h4>
+               </div>
+               <div class="baths">
+                  <img src="./img/icons/bath.svg" alt="dush">
+                  <h4><span>Baths:</span> 3</h4>
+               </div>
+            </div>
+            <div class="price">
+               <div class="price-in">
+                  <img src="./img/icons/euro.svg" alt="">
+                  <h4>4.950.000</h4>
+               </div>
+               <h4 class="reference">Reference : 6635322</h4>
+            </div>
+         </div>
+
+         <div class="product">
+            <img src="./img/dom.jpg" alt="product">
+            <div class="type">
+               For rent
+            </div>
+            <h3 class="title">Art Deco 5-bedroom villa with full floor r...</h3>
+            <h3 class="rayon">SAINT-JEAN-CAP-FERRAT</h3>
+            <div class="rooms">
+               <div class="beds">
+                  <img src="./img/icons/bed.svg" alt="bed">
+                  <h4><span>Beds:</span> 5</h4>
+               </div>
+               <div class="baths">
+                  <img src="./img/icons/bath.svg" alt="dush">
+                  <h4><span>Baths:</span> 3</h4>
+               </div>
+            </div>
+            <div class="price">
+               <div class="price-in">
+                  <img src="./img/icons/euro.svg" alt="">
+                  <h4>4.950.000</h4>
+               </div>
+               <h4 class="reference">Reference : 6635322</h4>
+            </div>
+         </div>
+
+         <div class="product">
+            <img src="./img/dom.jpg" alt="product">
+            <div class="type">
+               For rent
+            </div>
+            <h3 class="title">Art Deco 5-bedroom villa with full floor r...</h3>
+            <h3 class="rayon">SAINT-JEAN-CAP-FERRAT</h3>
+            <div class="rooms">
+               <div class="beds">
+                  <img src="./img/icons/bed.svg" alt="bed">
+                  <h4><span>Beds:</span> 5</h4>
+               </div>
+               <div class="baths">
+                  <img src="./img/icons/bath.svg" alt="dush">
+                  <h4><span>Baths:</span> 3</h4>
+               </div>
+            </div>
+            <div class="price">
+               <div class="price-in">
+                  <img src="./img/icons/euro.svg" alt="">
+                  <h4>4.950.000</h4>
+               </div>
+               <h4 class="reference">Reference : 6635322</h4>
+            </div>
+         </div>
+         
+         <div class="product">
+            <img src="./img/dom.jpg" alt="product">
+            <div class="type">
+               For rent
+            </div>
+            <h3 class="title">Art Deco 5-bedroom villa with full floor r...</h3>
+            <h3 class="rayon">SAINT-JEAN-CAP-FERRAT</h3>
+            <div class="rooms">
+               <div class="beds">
+                  <img src="./img/icons/bed.svg" alt="bed">
+                  <h4><span>Beds:</span> 5</h4>
+               </div>
+               <div class="baths">
+                  <img src="./img/icons/bath.svg" alt="dush">
+                  <h4><span>Baths:</span> 3</h4>
+               </div>
+            </div>
+            <div class="price">
+               <div class="price-in">
+                  <img src="./img/icons/euro.svg" alt="">
+                  <h4>4.950.000</h4>
+               </div>
+               <h4 class="reference">Reference : 6635322</h4>
+            </div>
+         </div>
+
+         <div class="product">
+            <img src="./img/dom.jpg" alt="product">
+            <div class="type">
+               For rent
+            </div>
+            <h3 class="title">Art Deco 5-bedroom villa with full floor r...</h3>
+            <h3 class="rayon">SAINT-JEAN-CAP-FERRAT</h3>
+            <div class="rooms">
+               <div class="beds">
+                  <img src="./img/icons/bed.svg" alt="bed">
+                  <h4><span>Beds:</span> 5</h4>
+               </div>
+               <div class="baths">
+                  <img src="./img/icons/bath.svg" alt="dush">
+                  <h4><span>Baths:</span> 3</h4>
+               </div>
+            </div>
+            <div class="price">
+               <div class="price-in">
+                  <img src="./img/icons/euro.svg" alt="">
+                  <h4>4.950.000</h4>
+               </div>
+               <h4 class="reference">Reference : 6635322</h4>
+            </div>
+         </div>
+
+         <div class="product">
+   <img src="./img/dom.jpg" alt="product">
+   <div class="type">
+      For rent
+   </div>
+   <h3 class="title">Art Deco 5-bedroom villa with full floor r...</h3>
+   <h3 class="rayon">SAINT-JEAN-CAP-FERRAT</h3>
+   <div class="rooms">
+   <div class="beds">
+      <img src="./img/icons/bed.svg" alt="bed">
+      <h4><span>Beds:</span> 5</h4>
+   </div>
+   <div class="baths">
+      <img src="./img/icons/bath.svg" alt="dush">
+      <h4><span>Baths:</span> 3</h4>
+   </div>
+   </div>
+   <div class="price">
+      <div class="price-in">
+      <img src="./img/icons/euro.svg" alt="">
+      <h4>4.950.000</h4>
+      </div>
+      <h4 class="reference">Reference : 6635322</h4>
+   </div>
+</div>
+      </div>
+     <div class="button"><a href="#"><button class="seemore">See more</button></a></div> 
+   </div>
    </div>
 
-
+   <div class="think-sell">
+      <div class="container">
+         <img src="img/bigsmoke.svg" alt="M">
+         <h2 class="title">Thinking of selling</h2>
+         <div class="button">
+            <button class="getin">Get in touch</button>
+         </div>
+      </div>
+   </div>
+   
+   <div class="news-and-articles">
+      <div class="container">
+      <div class="subtitle">News And Articles</div>
+      <div class="slider-news">
+         <img src="img/nice.jpg" alt="slide">
+         <img src="img/nice2.jpg" alt="slide">
+         <img src="img/nice3.jpg" alt="slide">
+      </div>
+      <div class="aboutsubtitle">Set for the monaco grand prix 2022</div>
+      <div class="about">
+         <p></p>
+         <div class="button"><a href="#"><button>Read more</button></a></div>
+      </div>
+         <div class="button"><a href="#"><button>All News</button></a></div>
+         </div>
+   </div>
 
 
 
    <footer>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
       <script src="/js/script.js"></script>
+      <script src="/js/slick.min.js"></script>
+      <script src="/js/dscript.js"></script>
       <div class="container">
          <div class="footer">
             <div class="left-part">
