--- a/footer.html
+++ b/footer.html
@@ -40,6 +40,8 @@
    <footer>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
       <script src="/js/script.js"></script>
+      <script src="/js/slick.min.js"></script>
+      <script src="/js/dscript.js"></script>
       <div class="container">
          <div class="footer">
           <div class="left-part">
