--- a/homepage.html
+++ b/homepage.html
@@ -106,9 +106,9 @@
       <h3 class="title">Neighborhoods And Properties</h3>
       <h4 class="subtitle">The famous French Riviera, which lies between the Alps.</h4>
       <div class="gallery">
-         <div class="rayon1"><a href="#">saint-jean-cap-ferrat</a></div>
-         <div class="rayon2"><a href="#">beaulieu-sur-mer</a></div>
-         <div class="rayon3"><a href="#">Villefranche-sur-Mer</a></div>
+         <div class="rayon1"><div class="name"><a href="#">saint-jean-cap-ferrat</a></div></div>
+         <div class="rayon2"><div class="name"><a href="#">beaulieu-sur-mer</a></div></div>
+         <div class="rayon3"><div class="name"><a href="#">Villefranche-sur-Mer</a></div></div>
       </div>
       </div>
       <div class="contbutton">
@@ -319,9 +319,9 @@
          </div>
       </div>
    </div>
-   
+   <div class="container">
    <div class="news-and-articles">
-      <div class="container">
+      
       <div class="subtitle">News And Articles</div>
       <div class="slider-news">
          <img src="img/nice.jpg" alt="slide">
@@ -330,10 +330,12 @@
       </div>
       <div class="aboutsubtitle">Set for the monaco grand prix 2022</div>
       <div class="about">
-         <p></p>
-         <div class="button"><a href="#"><button>Read more</button></a></div>
+         <p>Book your stay in one of our properties.The Grand Prix in Monaco is taking place on 26th-29th May 2022 for the 79th
+         time. Attending the race is an unforgettable moment that must be well anticipated and prepared ahead of time. Booking in
+         advance is not a choice but a necessity as accommodation availa...</p>
+         <a href="#"><button class="button">Read more</button></a>
       </div>
-         <div class="button"><a href="#"><button>All News</button></a></div>
+      <a href="#"><button class="button2">All News</button></a>
          </div>
    </div>
 
