--- a/properties.html
+++ b/properties.html
@@ -108,7 +108,7 @@
             <div class="breadcrumbs ">
                 <span class="breadcrumbs__link">Homepage</span>
                 <span>/</span>
-                <span class="breadcrumbs__link link__active">Properties search</span>
+                <span class="breadcrumbs__link link__active">Properties </span>
 
             </div>
         </div>
