--- a/header.html
+++ b/header.html
@@ -91,16 +91,17 @@
             </div>
             <div class="banner__text">
                 <p class="banner__text-top">MARKS REAL ESTATE</p>
-                <p class="banner__text-bottom">Our passion - Your new Home</p>
+                <p class="banner__text-bottom banner__text-bottom-company">A company with passion for real estate since
+                    2002</p>
+            </div>
+            <div class="container">
+
+                <div class="breadcrumbs ">
+                    <span class="breadcrumbs__link">Homepage</span>
+                    <span>/</span>
+                    <span class="breadcrumbs__link link__active">Properties </span>
+
+                </div>
             </div>
         </div>
-        <div class="choose__type">
-            <a href="" class="choose__type-item rent">Rent</a>
-            <a href="" class="choose__type-item buy">Buy</a>
-        </div>
     </header>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="/js/script.js"></script>
-</body>
-
-</html>
