--- a/article-single.html
+++ b/article-single.html
@@ -145,10 +145,11 @@
                     <img src="/img/article2.png" alt="" class="item__img">
                 </div>
             </div>
-            <div class="navigation__buttons container">
+            <div class=" navigation__buttons container">
                 <a href="" class="navigation__buttons-button">Previous Post</a>
                 <a href="" class="navigation__buttons-button">All News</a>
-                <a href="" class="navigation__buttons-button">Next Post</a>
+                <a href="" class="navigation__buttons-button">
+                    Next Post</a>
             </div>
         </div>
     </main>
@@ -178,7 +179,7 @@
                         </div>
                         <div class="e-mail">
                             <img src="./img/icons/email-white.svg" alt="mail">
-                            <a href="marks@marks.fr">marks@marks.fr</a>
+                            <a href="marks@marksfr">marks@marks.fr</a>
                         </div>
                         <div class="social-links">
                             <a href="#" class="instagram"><img src="./img/icons/blackinstagram.svg" alt="instagram"></a>
