--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,4 @@
 <footer>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="/js/script.js"></script>
     <div class="container">
         <div class="footer">
             <div class="left-part">
@@ -122,4 +120,7 @@
 
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="/js/slick.min.js"></script>
+    <script src="/js/script.js"></script>
 </footer>
