--- a/header.html
+++ b/header.html
@@ -34,7 +34,10 @@
                 <div class="header__top container">
 
                     <div class="header__top-logo">
-                        <img src="/img/marks-logo.svg" alt="" class="header__logo">
+                        <a href="">
+
+                            <img src="/img/marks-logo.svg" alt="" class="header__logo">
+                        </a>
                     </div>
                     <img src="/img/icons/language-switcher.svg" alt="switch" class="translate__ico">
                     <div class="header__top-icons">
