--- a/services.html
+++ b/services.html
@@ -15,7 +15,6 @@
         <div class="pre-header">
             <div class="container">
                 <div class="pre-header__body">
-
                     <div class="pre-header__location">
                         <img src="img/icons/location.svg" alt="location" class="location__ico">
                         <p class="location__address">6 Avenue Jean Mermoz, 06230 Saint-Jean-Cap-Ferrat, France</p>
@@ -32,7 +31,10 @@
                 <div class="header__top container">
 
                     <div class="header__top-logo">
-                        <img src="/img/marks-logo.svg" alt="" class="header__logo">
+                        <a href="#" class="">
+
+                            <img src="/img/marks-logo.svg" alt="" class="header__logo">
+                        </a>
                     </div>
                     <img src="/img/icons/language-switcher.svg" alt="switch" class="translate__ico">
                     <div class="header__top-icons">
@@ -148,7 +150,7 @@
                         Thinking of selling?
                     </div>
                     <div class="block__thinking-button">
-                        <a href="" class="button-link"> Get in touch</a>
+                        <a href="" class="button-link open-form__popup"> Get in touch</a>
 
                     </div>
                 </div>
@@ -195,11 +197,38 @@
             </div>
         </div>
 
+        <div class="form__popup-bg">
+            <div class="form__popup">
+                <img src="/img/gray-m-popup.svg" class="gray__m">
+                <img src="/img/icons/close_popup.png" alt="Close" class="close-popup close-form__popup">
+                <div class="col__form">
+                    <h1 class="page__title form__title">Contact us</h1>
 
+                    <div class="form__item">
+                        <label for="form__name" class="form__label">Name</label>
+                        <input type="text" class="form__name" id="form__name" placeholder="Name">
+                    </div>
+                    <div class="form__item">
+                        <label for="form__email" class="form__label">Email Address</label>
+                        <input type="text" class="form__name" id="form__email" placeholder="Email address">
+                    </div>
+                    <div class="form__item">
+                        <label for="form__number" type="number" class="form__label">Phone number</label>
+                        <input type="text" class="form__name" id="form__number" placeholder="+33 0 00 00 00 00">
+                    </div>
+                </div>
+                <div class="form__item">
+
+                    <label for="form__message" class="form__label message__label">What you are
+                        searching for</label>
+                    <textarea id="form__message"
+                        placeholder="Tell us what you are searching for and we will contact you shortly."></textarea>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script src="/js/script.js"></script>
+
         <div class="container">
             <div class="footer">
                 <div class="left-part">
@@ -323,6 +352,9 @@
         </div>
 
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="/js/slick.min.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
